# GB2PR_PROJECT

./: .bazelrc  .gitignore  BUILD  CommonUtlity.py  MODULE.bazel  README.md  WatchDog.py  compareFileNameSize.py  configs.ini  feedProcessing.py  latestfeedprocessing.py  merging.py  pyproject.toml  recordCount.py  samplelog.txt
cmd/main/: BUILD  godcrazycode.py
gb2pr/: __init__.py
internal/monitors/: BUILD  WatchDog.py  logMonitor.py
internal/processors/: BUILD  feedProcessing.py  latestfeedprocessing.py  merging.py
pkg/common/: BUILD  compareFileNameSize.py  recordCount.py
pkg/config/: BUILD  configs.ini
src/gb2pr/: CommonUtlity.py  WatchDog.py  __init__.py  compareFileNameSize.py  feedProcessing.py  godcrazycode.py  latestfeedprocessing.py  logMonitor.py  merging.py  recordCount.py
tests/: BUILD  test_package_import.py
